[tool.poetry]
name = "herre"
version = "0.3.20"
readme = "README.md"
description = "oauth2/openid client tailored to pyqt and async environments"
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
license = "CC BY-NC 3.0"
packages = [{ include = "herre" }]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = ">3.7.4"
certifi = ">2021"
oauthlib = "^3.1.1"
pydantic = ">=1.9.0"
koil = ">=0.2.11"
fakts = { version = "^0.2.13", optional = true }
QtPy = { version = "^2.0.1", optional = true }

[tool.poetry.extras]
qt = ["QtPy"]
windowed = ["PyQtWebEngine"]
fakts = ["fakts"]


[tool.mypy]
exclude = ["venv/"]
ignore_missing_imports = true


[tool.ruff]
extend-select = ["ANN", "D1"]
ignore = ["ANN101", "D107", "D106", "ANN002", "ANN003"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

# Same as Black.
line-length = 100

[tool.poetry.group.dev.dependencies]
testcontainers = "3.7.0"
autoflake = "^1.7.7"
pytest = "^7.2.0"
aiohttp = "^3.8.3"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-aiohttp = "^1.0.4"
ruff = "^0.0.254"
mypy = "^1.0.1"
pytest-qt = "^4.2.0"

[tool.pytest.ini_options]
qt_api = "pyqt5"
markers = [
    "integration: marks tests that require a running server",
    "qt: marks tests that require a running qt application",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["herre"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"


[[tool.mypy.overrides]]
module = ["oauthlib.*", "koil.*", "fakts.*"]
ignore_missing_imports = true
